@@ -3,6 +3,10 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2011-07-25 (SVN):
+    * zone.c: Renamed the memblock_t and zonelist_t id members to magic
+      for better readability. Renamed zonelist_t idx member to id.
+
 2011-07-20 (SVN):
     * hexenworld/server/pr_edict.c: Fixed segmentation fault in case of
       bad pointer in NUM_FOR_EDICT().  Removed extra title prints from
